--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,5 +10,7 @@
     <h1>Lasagna</h1>
     <img src="./Lasagna.jpg" alt="Picture of lasagna">
     <h2>World's Best Lasagna</h2>
-</body>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, voluptas perferendis quisquam sapiente earum voluptatibus. </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem at eum dolor mollitia voluptate laudantium harum, totam minus. Ullam expedita temporibus tempore excepturi maiores nihil a, quam architecto accusamus reprehenderit.</p>
+</body> 
 </html>
