--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,8 +9,24 @@
 <body>
     <h1>Lasagna</h1>
     <img src="./Lasagna.jpg" alt="Picture of lasagna">
+        <p>It takes a little work, but it is worth it.</p>
+        <p>448 calories; protein 29.7g; carbohydrates 36.5g; fat 21.3g; cholesterol 81.8mg; sodium 1400.4mg. </p>
     <h2>World's Best Lasagna</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, voluptas perferendis quisquam sapiente earum voluptatibus. </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem at eum dolor mollitia voluptate laudantium harum, totam minus. Ullam expedita temporibus tempore excepturi maiores nihil a, quam architecto accusamus reprehenderit.</p>
-</body> 
+    <ul>
+        <li>italian sausage</li>
+        <li>onion</li>
+        <li>garlic</li>
+        <li>ground beef</li>
+        <li>tomato sauce</li>
+    </ul>
+    <ol>
+        <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
+        <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water. In a mixing bowl, combine ricotta cheese with egg, remaining parsley, and 1/2 teaspoon salt.</li>
+        <li>Preheat oven to 375 degrees F (190 degrees C).    </li>
+        <li>To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce. Spread with one half of the ricotta cheese mixture. Top with a third of mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese. Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray, or make sure the foil does not touch the cheese.</li>
+        <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.    </li>
+    </ol>     
+
+
+    </body> 
 </html>
