add page for banana ice cream sandwich and a picture

--- a/recipes/banana_ice_cream.html
+++ b/recipes/banana_ice_cream.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Banana ice cream</h1>
-    <a href="/home/luka/repos/odin-recipes/recipes/banana.jpg"></a>
+   <img src="/home/luka/repos/odin-recipes/recipes/banana.jpg" alt="banana">
     
 </body>
 </html>
