finish banana ice cream sandwiches page

--- a/recipes/banana_ice_cream.html
+++ b/recipes/banana_ice_cream.html
@@ -7,8 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Banana ice cream</h1>
+    <h1>Banana ice cream sandwiches</h1>
    <img src="/home/luka/repos/odin-recipes/recipes/banana.jpg" alt="banana">
-    
+        <p>Bake peanut butter cookies and blitz frozen bananas with cream and vanilla to make this impressive speedy dessert.</p>
+        <p>Kids will think they've hit the jackpot</p> 
+    <h2>Quick banana ice cream sandwiches</h2>
+    <ul>
+        <li>200g peanut butter (crunchy or smooth is fine)</li>
+        <li>175g golden caster sugar</li>
+        <li>75g dark chocolate , chopped into chunks</li>
+        <li>1 large egg</li>
+        <li>3 bananas , peeled, chopped and frozen in advance</li>
+        <li>2 tbsp double cream</li>
+        <li>1 tsp vanilla essence</li>
+    </ul>
+    <ol>
+        <li>Heat oven to 180C/fan 160C/gas 4 and line two large baking sheets with baking parchment. Put the peanut butter, sugar, ¼ tsp fine table salt and chocolate chunks in a bowl and mix well with a wooden spoon. Crack in the egg and mix again until the mixture clumps together and forms a dough.</li>
+        <li>Break off chunks of dough (about the size of a cherry tomato) and arrange them, spaced apart, on the sheets. Press the cookies down with the back of a fork to squash them a little. (The cookies can be frozen for up to two months – to cook from frozen, add an extra 1-2 mins to the cooking time.) Bake for about 12 mins until golden around the edges and paler in the centre. Leave to cool on the trays for 5 mins.</li>
+        <li>Meanwhile, put the bananas, cream and vanilla in a food processor and blend until they make a thick ice cream. Scoop into balls with an ice cream scoop, and sandwich between the cookies. Serve immediately.</li>
+     </ol>
+
 </body>
 </html>
